# side-projects

./: README.md
folding_rl/: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_1.md  pyproject.toml
folding_rl/memory/: MEMORY.md
folding_rl/scripts/: evaluate.py  run_experiment.sh  train.py
folding_rl/src/folding_rl/: __init__.py  config.py
folding_rl/src/folding_rl/data/: fetch_pdb.py
folding_rl/src/folding_rl/env/: initialization.py  protein_env.py  scoring.py  voxel_grid.py
folding_rl/src/folding_rl/model/: policy_head.py  rope_3d.py  transformer.py  value_head.py
folding_rl/src/folding_rl/rl/: ppo.py  rollout_buffer.py  utils.py
